[tool.poetry]
name = "pycounts_pb"
version = "0.1.0"
description = "Calculate words counts in a text file!"
authors = ["Pahul Brar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.8.4"
click = "^8.1.7"
sqlalchemy = "^2.0.29"
tabulate = "^0.9.0"
myst-nb = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
jupyter = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
